sylvia/tests/ui/attributes/payload/invalid_params.stderr
error: Invalid payload parameter.
       = note: Expected [`raw`].
  --> tests/ui/attributes/payload/invalid_params.rs:25:23
   |
25 |         #[sv::payload(invalid)] _param: Option<Binary>,
   |                       ^^^^^^^
